[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.19.1", features = ["std"] }
env_logger = "0.10"
serde = "1.0"
fhe = { path = "../lib/fhe/crates/fhe" }
fhe-traits = { path = "../lib/fhe/crates/fhe-traits" }
rand = "0.8.5"
bincode = "1.3.3"
