[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.19.1", default-features = false, features = ["std"] }
fhe = { path = "../../lib/fhe/crates/fhe" }
fhe-traits = { path = "../../lib/fhe/crates/fhe-traits" }
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
